--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
-    testCompile 'junit:junit:4.12'
+    compile 'com.squareup.okhttp3:okhttp:3.0.0-RC1'
+    compile 'com.zhy:okhttputils:2.6.2'
+    compile project(':baselib')
 }
