--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.0.0-RC1'
     compile 'com.zhy:okhttputils:2.6.2'
     compile project(':baselib')
+    compile 'com.alibaba:fastjson:1.2.1'
 }
