--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,11 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    compile project(':baselib')
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.0.0-RC1'
     compile 'com.zhy:okhttputils:2.6.2'
-    compile project(':baselib')
     compile 'com.alibaba:fastjson:1.2.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
+    testCompile 'junit:junit:4.12'
 }
