--- a/weight/superitem/build.gradle
+++ b/weight/superitem/build.gradle
@@ -26,8 +26,9 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     compile "com.android.support:appcompat-v7:${supportLibraryVersion}"
-    compile "com.google.guava:guava:$rootProject.guavaVersion"
-    compile project(':weight:superitem')
+    testCompile 'junit:junit:4.12'
 }
